--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <FrameLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/image"
-            android:layout_width="150dp"
+            android:layout_width="match_parent"
             android:layout_height="150dp"
             android:src="@drawable/image1" />
 
@@ -19,7 +19,7 @@
             android:id="@+id/buttonLike"
             android:layout_width="60dp"
             android:layout_height="36dp"
-            android:layout_marginStart="90dp"
+            android:layout_marginStart="230dp"
             android:layout_marginTop="10dp"
             android:text=""
             android:textSize="8sp" />
@@ -28,7 +28,7 @@
             android:id="@+id/buttonBuy"
             android:layout_width="109dp"
             android:layout_height="30dp"
-            android:layout_marginStart="55dp"
+            android:layout_marginStart="255dp"
             android:layout_marginTop="110dp"
             android:text=""
             android:textSize="8sp" />
